@@ -8,7 +8,6 @@ import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
 import java.util.Collections;
-import java.util.List;
 
 public class FuncionarioDetalhesDto implements UserDetails {
     private String nome;
@@ -44,8 +43,7 @@ public class FuncionarioDetalhesDto implements UserDetails {
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-
-        return List.of((GrantedAuthority) () -> "ROLE_" + cargo.name());
+        return Collections.emptyList(); // Sem níveis de autorização por enquanto
     }
 
     @Override
